--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
 .App {
   text-align: center;
+  padding-top: 50px;
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.label {
+  margin-right: 10px;
+  font-size: 25px;
+  font-weight: 500;
+  
 }
+.input {
+  margin-right: 10px;
+  background-color: rgba(210, 238, 250, 0.834);
+  border: none;
+  border-radius: 15px;
+  height: 50px;
+  width: 300px;
+  font-size: 20px;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btnAdd {
+  border-radius: 15px;
+  height: 50px;
+  font-size: 20px;
+  font-weight: 500;
+  border: 2px solid grey;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.cajas {
+  
+  margin: 10px;
+  display:inline-block;
+  height: 100px;
+  width: 100px;
+  text-indent: 100%;
 }
